<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dialog_body"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:gravity="center"
        android:text="@string/info_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/crear_boton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crear_boton"
        android:paddingVertical="@dimen/button_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_text" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/padding_between"
        android:background="@color/divider_negro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crear_boton" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_usuario"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        android:hint="Usuario"
        app:startIconDrawable="@drawable/cuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/padding_between"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nombre_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:singleLine="true"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_contra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusTopStart="10dp"
        app:startIconDrawable="@drawable/contrasenya"
        android:hint="contraseña"
        app:boxCornerRadiusTopEnd="10dp"
        android:layout_marginVertical="@dimen/padding_between"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_usuario" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contra_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/recordar_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordar_check"
        app:layout_constraintStart_toStartOf="@+id/text_input_layout_contra"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_contra" />

    <TextView
        android:id="@+id/olvidar_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olvidar_text"
        app:layout_constraintEnd_toEndOf="@+id/text_input_layout_contra"
        app:layout_constraintTop_toBottomOf="@+id/recordar_check" />

    <com.google.android.material.button.MaterialButton
        android:paddingVertical="@dimen/button_padding"
        android:id="@+id/entrar_boton"
        android:text="@string/entrar_boton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>